# harnessOne

./: .gitignore  README.md  cognitive_harness_paper.tex  demo-opencode.json  harness.bat  harness.py  harness_cli.py  pyproject.toml  runner.py
.harness/: config.yaml
.harness/sessions/: 1a0b79a4.json  36e165b0.json  67927ebf.json  6bd54405.json  89d646ce.json  9b351336.json  bf8ec0e8.json
config/: default.yaml  global-mcp.yaml
mcp_server/: __init__.py  embeddings.py  graph.py  server.py  vault.py
references/: analysis_results.md  claude-done-list.md  run-it.md  whats-done-till-v1.txt
references/skills/: .usage.json
sessions/: 696015b7.json  99fda937.json
skills/data-science/: DESCRIPTION.md
skills/file-operations/: SKILL.md
src/cognitive_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/harness/: __init__.py  cli_main.py  config.py  orchestrator.py  state.py
tests/: conftest.py  test_comprehensive.py
tests/integration/: test_full_cycle.py  test_memory_flow.py  test_real_llm.py  test_wiring.py
tests/unit/: test_chat_engine.py  test_compactor.py  test_config.py  test_config_v31.py  test_context_manager.py  test_embeddings.py  test_evolution.py  test_evolution_rigorous.py  test_file_ops.py  test_global_store.py  test_global_store_rigorous.py  test_graph.py  test_llm_client.py  test_mcp_client.py  test_mcp_manager.py  test_memory_query.py  test_memory_writer.py  test_memory_writer_node.py  test_optimizer.py  (+17 more)
user-references-and-feedback/: pre-v3.md
user-references-and-feedback(ignore-it)/: claude-review.md  soft-reference1.md
(+106 files in other folders)
